force-app/main/default/objects/GiftCommitmentSchedule/fields/Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Donation_Status__c</fullName>
    <label>Donation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Succeeded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>