force-app/main/default/objects/GiftCommitmentSchedule/fields/Donor_Covered_Fees__c.field-meta.xml
<CustomField>
    <fullName>Donor_Covered_Fees__c</fullName>
    <label>Donor Covered Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>