force-app/main/default/objects/GiftCommitmentSchedule/fields/Donor_Note__c.field-meta.xml
<CustomField>
    <fullName>Donor_Note__c</fullName>
    <label>Donor Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>